syntax="proto3";

package metrics;

option go_package = "metrics/proto";

message UpsertGaugeRequest {
  string id = 1;
  int64 value = 2;
}

message UpsertCounterRequest {
  string id = 1;
  double delta = 2;
}

message UpsertResponse {
  string error = 1;
}

service Metrics {
  rpc UpsertGauge(UpsertGaugeRequest) returns (UpsertResponse);
  rpc UpsertCounter(UpsertCounterRequest) returns (UpsertResponse);
}